--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 	background-color:#FFEBCD;
 	}
 
-.country-name{
+.name{
 	font-size: 25px;
 	font-weight:bold;
 	font-style: italic;
@@ -10,10 +10,7 @@
 	color: #4A3C4F;
 	padding: 10px;
 	border-radius: 5px;
-	margin-left: 10px;
-	margin-right: 1000px;
 	background: #D4A390;
-	margin-top: 20px;
 }
 
 .country-capital{
@@ -21,6 +18,7 @@
 	font-weight:bold;
 	text-align: left;
 	color: #4A3C4F;
+	margin-top: 20px;
     margin-left: 18px;
     font-style: italic;
 }
@@ -44,31 +42,36 @@
 }
 
 .country-description{
-	position: absolute; /* Абсолютное позиционирование */
-     width: 870px;
-     margin-left: 380px;
-     margin-top: -110px;
+
+	margin: 0 auto;
+    width: 870px;
 	font-size: 20px;
 	font-weight:bold;
 	text-align: center;
 	color: #4A3C4F; 
 	padding: 2px;
+	margin-top: 20px;
 
 }
 
 .city-name{
+	margin: 0 auto;
+	width:350px;
 	padding:10px;
 	border-radius: 5px; 
-	margin-left: 350;
-	margin-right: 350;
 	text-align: center;
 	background: #DAC586;
-    margin-top: 60px;
-    margin-bottom: 40px;
+	margin-bottom: 20px;
+	margin-top: 20px;
+}
+
+.city-photo{
+	margin: 0 auto;
+	width:450px;
+	margin-bottom: 20px;
 }
 
 img{
-	width:350px;
+	width:450px;
 	border: 3px solid #D4A390;
-	margin-left: 470px;
 }
